--- a/Windows/ConditionDetailWindow.xaml
+++ b/Windows/ConditionDetailWindow.xaml
@@ -25,11 +25,11 @@
                 <Setter Property="ToolTip" Value="Invert match result" />
                 <Setter Property="VerticalAlignment" Value="Center" />
                 <Style.Triggers>
-                    <DataTrigger Binding="{Binding NegativeMatch}" Value="False">
+                    <DataTrigger Binding="{Binding IsInverted}" Value="False">
                         <Setter Property="Content" Value="🛑" />
                         <Setter Property="Foreground" Value="Green" />
                     </DataTrigger>
-                    <DataTrigger Binding="{Binding NegativeMatch}" Value="True">
+                    <DataTrigger Binding="{Binding IsInverted}" Value="True">
                         <Setter Property="Content" Value="⛔" />
                         <Setter Property="Foreground" Value="Red" />
                     </DataTrigger>
@@ -40,11 +40,11 @@
                 <Setter Property="ToolTip" Value="Match by Default" />
                 <Setter Property="VerticalAlignment" Value="Center" />
                 <Style.Triggers>
-                    <DataTrigger Binding="{Binding DefaultMatch}" Value="False">
+                    <DataTrigger Binding="{Binding DefaultResult}" Value="False">
                         <Setter Property="Content" Value="☆" />
                         <Setter Property="Foreground" Value="Orange" />
                     </DataTrigger>
-                    <DataTrigger Binding="{Binding DefaultMatch}" Value="True">
+                    <DataTrigger Binding="{Binding DefaultResult}" Value="True">
                         <Setter Property="Content" Value="★" />
                         <Setter Property="Foreground" Value="Gold" />
                     </DataTrigger>
@@ -55,11 +55,11 @@
                 <Setter Property="ToolTip" Value="Dismiss this condition in match" />
                 <Setter Property="VerticalAlignment" Value="Center" />
                 <Style.Triggers>
-                    <DataTrigger Binding="{Binding DismissMatch}" Value="False">
+                    <DataTrigger Binding="{Binding IsDisabled}" Value="False">
                         <Setter Property="Content" Value="⏺" />
                         <Setter Property="Foreground" Value="Green" />
                     </DataTrigger>
-                    <DataTrigger Binding="{Binding DismissMatch}" Value="True">
+                    <DataTrigger Binding="{Binding IsDisabled}" Value="True">
                         <Setter Property="Content" Value="⏸" />
                         <Setter Property="Foreground" Value="Red" />
                     </DataTrigger>
@@ -120,9 +120,9 @@
                             </ComboBox.ItemTemplate>
                         </ComboBox>
 
-                        <CheckBox Name="chkBxNegative" Margin="2, 0" Style="{StaticResource checkBoxInvert}" IsChecked="{Binding NegativeMatch}" />
-                        <CheckBox Name="chkBxDefault" Margin="2, 0" Style="{StaticResource checkBoxDefault}" IsChecked="{Binding DefaultMatch}" />
-                        <CheckBox Name="chkBxDismiss" Margin="2, 0" Style="{StaticResource checkBoxDismiss}" IsChecked="{Binding DismissMatch}" />
+                        <CheckBox Name="chkBxNegative" Margin="2, 0" Style="{StaticResource checkBoxInvert}" IsChecked="{Binding IsInverted}" />
+                        <CheckBox Name="chkBxDefault" Margin="2, 0" Style="{StaticResource checkBoxDefault}" IsChecked="{Binding DefaultResult}" />
+                        <CheckBox Name="chkBxDismiss" Margin="2, 0" Style="{StaticResource checkBoxDismiss}" IsChecked="{Binding IsDisabled}" />
                     </StackPanel>
 
                     <Grid Name="grdButton" Grid.Column="1">
@@ -143,15 +143,9 @@
 
                 <TreeView Name="trConditions" MinHeight="50">
                     <TreeView.Resources>
-                        <HierarchicalDataTemplate DataType="{x:Type local:ConditionGroupNodeVO}" ItemsSource="{Binding Conditions}">
+                        <HierarchicalDataTemplate DataType="{x:Type local:GroupConditionNodeVO}" ItemsSource="{Binding Conditions}">
                             <Border BorderBrush="GreenYellow" BorderThickness="1">
                                 <StackPanel Orientation="Horizontal">
-                                    <StackPanel.ContextMenu>
-                                        <ContextMenu>
-                                            <MenuItem Name="mnItmAddConditionGroup" Header="Add group" Tag="{Binding}" Click="MuItmAddConditionGroup_Click" />
-                                            <MenuItem Name="mnItmAddCondition" Header="Add field" Tag="{Binding}" Click="MnItmAddCondition_Click" />
-                                        </ContextMenu>
-                                    </StackPanel.ContextMenu>
                                     <ComboBox ItemsSource="{StaticResource GroupMatchModes}" SelectedValue="{Binding MatchMode}">
                                         <ComboBox.ItemTemplate>
                                             <DataTemplate>
@@ -159,9 +153,9 @@
                                             </DataTemplate>
                                         </ComboBox.ItemTemplate>
                                     </ComboBox>
-                                    <CheckBox Margin="2, 0" Style="{StaticResource checkBoxInvert}" IsChecked="{Binding NegativeMatch}" />
-                                    <CheckBox Margin="2, 0" Style="{StaticResource checkBoxDefault}" IsChecked="{Binding DefaultMatch}" />
-                                    <CheckBox Margin="2, 0" Style="{StaticResource checkBoxDismiss}" IsChecked="{Binding DismissMatch}" />
+                                    <CheckBox Margin="2, 0" Style="{StaticResource checkBoxInvert}" IsChecked="{Binding IsInverted}" />
+                                    <CheckBox Margin="2, 0" Style="{StaticResource checkBoxDefault}" IsChecked="{Binding DefaultResult}" />
+                                    <CheckBox Margin="2, 0" Style="{StaticResource checkBoxDismiss}" IsChecked="{Binding IsDisabled}" />
                                 </StackPanel>
                             </Border>
                         </HierarchicalDataTemplate>
@@ -185,9 +179,9 @@
                                     <Label Name="lblValue" Content="Value" />
                                     <TextBox Name="txtBxValue" MinWidth="150" MaxWidth="300" Margin="0, 0, 10, 0" Text="{Binding TargetValue}" />
 
-                                    <CheckBox Margin="2, 0" Style="{StaticResource checkBoxInvert}" IsChecked="{Binding NegativeMatch}" />
-                                    <CheckBox Margin="2, 0" Style="{StaticResource checkBoxDefault}" IsChecked="{Binding DefaultMatch}" />
-                                    <CheckBox Margin="2, 0" Style="{StaticResource checkBoxDismiss}" IsChecked="{Binding DismissMatch}" />
+                                    <CheckBox Margin="2, 0" Style="{StaticResource checkBoxInvert}" IsChecked="{Binding IsInverted}" />
+                                    <CheckBox Margin="2, 0" Style="{StaticResource checkBoxDefault}" IsChecked="{Binding DefaultResult}" />
+                                    <CheckBox Margin="2, 0" Style="{StaticResource checkBoxDismiss}" IsChecked="{Binding IsDisabled}" />
                                 </StackPanel>
                             </Border>
                         </DataTemplate>
