--- a/Windows/Controls/FieldConditionView.xaml
+++ b/Windows/Controls/FieldConditionView.xaml
@@ -21,11 +21,11 @@
                     <Setter Property="ToolTip" Value="Invert match result" />
                     <Setter Property="VerticalAlignment" Value="Center" />
                     <Style.Triggers>
-                        <DataTrigger Binding="{Binding NegativeMatch}" Value="False">
+                        <DataTrigger Binding="{Binding IsInverted}" Value="False">
                             <Setter Property="Content" Value="🛑" />
                             <Setter Property="Foreground" Value="Green" />
                         </DataTrigger>
-                        <DataTrigger Binding="{Binding NegativeMatch}" Value="True">
+                        <DataTrigger Binding="{Binding IsInverted}" Value="True">
                             <Setter Property="Content" Value="⛔" />
                             <Setter Property="Foreground" Value="Red" />
                         </DataTrigger>
@@ -36,11 +36,11 @@
                     <Setter Property="ToolTip" Value="Match by Default" />
                     <Setter Property="VerticalAlignment" Value="Center" />
                     <Style.Triggers>
-                        <DataTrigger Binding="{Binding DefaultMatch}" Value="False">
+                        <DataTrigger Binding="{Binding DefaultResult}" Value="False">
                             <Setter Property="Content" Value="☆" />
                             <Setter Property="Foreground" Value="Orange" />
                         </DataTrigger>
-                        <DataTrigger Binding="{Binding DefaultMatch}" Value="True">
+                        <DataTrigger Binding="{Binding DefaultResult}" Value="True">
                             <Setter Property="Content" Value="★" />
                             <Setter Property="Foreground" Value="Gold" />
                         </DataTrigger>
@@ -51,11 +51,11 @@
                     <Setter Property="ToolTip" Value="Dismiss this condition in match" />
                     <Setter Property="VerticalAlignment" Value="Center" />
                     <Style.Triggers>
-                        <DataTrigger Binding="{Binding DismissMatch}" Value="False">
+                        <DataTrigger Binding="{Binding IsDisabled}" Value="False">
                             <Setter Property="Content" Value="⏺" />
                             <Setter Property="Foreground" Value="Green" />
                         </DataTrigger>
-                        <DataTrigger Binding="{Binding DismissMatch}" Value="True">
+                        <DataTrigger Binding="{Binding IsDisabled}" Value="True">
                             <Setter Property="Content" Value="⏸" />
                             <Setter Property="Foreground" Value="Red" />
                         </DataTrigger>
@@ -78,8 +78,8 @@
         <Label Name="lblValue" Content="Value" />
         <TextBox Name="txtBxValue" MinWidth="150" MaxWidth="300" Margin="0, 0, 10, 0" Text="{Binding TargetValue}" />
 
-        <CheckBox Name="chkBxNegative" Margin="2, 0" Style="{StaticResource checkBoxInvert}" IsChecked="{Binding NegativeMatch}" />
-        <CheckBox Name="chkBxDefault" Margin="2, 0" Style="{StaticResource checkBoxDefault}" IsChecked="{Binding DefaultMatch}" />
-        <CheckBox Name="chkBxDismiss" Margin="2, 0" Style="{StaticResource checkBoxDismiss}" IsChecked="{Binding DismissMatch}" />
+        <CheckBox Name="chkBxNegative" Margin="2, 0" Style="{StaticResource checkBoxInvert}" IsChecked="{Binding IsInverted}" />
+        <CheckBox Name="chkBxDefault" Margin="2, 0" Style="{StaticResource checkBoxDefault}" IsChecked="{Binding DefaultResult}" />
+        <CheckBox Name="chkBxDismiss" Margin="2, 0" Style="{StaticResource checkBoxDismiss}" IsChecked="{Binding IsDisabled}" />
     </StackPanel>
 </UserControl>
