--- a/Windows/Controls/FilterListView.xaml
+++ b/Windows/Controls/FilterListView.xaml
@@ -14,11 +14,11 @@
                     <Setter Property="ToolTip" Value="Invert match result" />
                     <Setter Property="VerticalAlignment" Value="Center" />
                     <Style.Triggers>
-                        <DataTrigger Binding="{Binding NegativeMatch}" Value="False">
+                        <DataTrigger Binding="{Binding IsInverted}" Value="False">
                             <Setter Property="Content" Value="🛑" />
                             <Setter Property="Foreground" Value="Green" />
                         </DataTrigger>
-                        <DataTrigger Binding="{Binding NegativeMatch}" Value="True">
+                        <DataTrigger Binding="{Binding IsInverted}" Value="True">
                             <Setter Property="Content" Value="⛔" />
                             <Setter Property="Foreground" Value="Red" />
                         </DataTrigger>
@@ -29,11 +29,11 @@
                     <Setter Property="ToolTip" Value="Match by Default" />
                     <Setter Property="VerticalAlignment" Value="Center" />
                     <Style.Triggers>
-                        <DataTrigger Binding="{Binding DefaultMatch}" Value="False">
+                        <DataTrigger Binding="{Binding DefaultResult}" Value="False">
                             <Setter Property="Content" Value="☆" />
                             <Setter Property="Foreground" Value="Orange" />
                         </DataTrigger>
-                        <DataTrigger Binding="{Binding DefaultMatch}" Value="True">
+                        <DataTrigger Binding="{Binding DefaultResult}" Value="True">
                             <Setter Property="Content" Value="★" />
                             <Setter Property="Foreground" Value="Gold" />
                         </DataTrigger>
@@ -43,11 +43,11 @@
                     <Setter Property="ToolTip" Value="Dismiss this condition in match" />
                     <Setter Property="VerticalAlignment" Value="Center" />
                     <Style.Triggers>
-                        <DataTrigger Binding="{Binding DismissMatch}" Value="False">
+                        <DataTrigger Binding="{Binding IsDisabled}" Value="False">
                             <Setter Property="Content" Value="⏺" />
                             <Setter Property="Foreground" Value="Green" />
                         </DataTrigger>
-                        <DataTrigger Binding="{Binding DismissMatch}" Value="True">
+                        <DataTrigger Binding="{Binding IsDisabled}" Value="True">
                             <Setter Property="Content" Value="⏸" />
                             <Setter Property="Foreground" Value="Red" />
                         </DataTrigger>
@@ -57,12 +57,12 @@
                 <Style x:Key="textInvert" TargetType="TextBlock">
                     <Setter Property="ToolTip" Value="Invert match result" />
                     <Style.Triggers>
-                        <DataTrigger Binding="{Binding NegativeMatch}" Value="False">
+                        <DataTrigger Binding="{Binding IsInverted}" Value="False">
                             <Setter Property="Text" Value="🛑" />
                             <Setter Property="Foreground" Value="Green" />
                             <Setter Property="Visibility" Value="Collapsed" />
                         </DataTrigger>
-                        <DataTrigger Binding="{Binding NegativeMatch}" Value="True">
+                        <DataTrigger Binding="{Binding IsInverted}" Value="True">
                             <Setter Property="Text" Value="⛔" />
                             <Setter Property="Foreground" Value="Red" />
                         </DataTrigger>
@@ -72,12 +72,12 @@
                 <Style x:Key="textDefault" TargetType="TextBlock">
                     <Setter Property="ToolTip" Value="Match by Default" />
                     <Style.Triggers>
-                        <DataTrigger Binding="{Binding DefaultMatch}" Value="False">
+                        <DataTrigger Binding="{Binding DefaultResult}" Value="False">
                             <Setter Property="Text" Value="☆" />
                             <Setter Property="Foreground" Value="Orange" />
                             <Setter Property="Visibility" Value="Collapsed" />
                         </DataTrigger>
-                        <DataTrigger Binding="{Binding DefaultMatch}" Value="True">
+                        <DataTrigger Binding="{Binding DefaultResult}" Value="True">
                             <Setter Property="Text" Value="★" />
                             <Setter Property="Foreground" Value="Gold" />
                         </DataTrigger>
@@ -87,12 +87,12 @@
                 <Style x:Key="textDismiss" TargetType="TextBlock">
                     <Setter Property="ToolTip" Value="Dismiss this condition in match" />
                     <Style.Triggers>
-                        <DataTrigger Binding="{Binding DismissMatch}" Value="False">
+                        <DataTrigger Binding="{Binding IsDisabled}" Value="False">
                             <Setter Property="Text" Value="⏺" />
                             <Setter Property="Foreground" Value="Green" />
                             <Setter Property="Visibility" Value="Collapsed" />
                         </DataTrigger>
-                        <DataTrigger Binding="{Binding DismissMatch}" Value="True">
+                        <DataTrigger Binding="{Binding IsDisabled}" Value="True">
                             <Setter Property="Text" Value="⏸" />
                             <Setter Property="Foreground" Value="Red" />
                         </DataTrigger>
@@ -123,9 +123,9 @@
                 </ComboBox.ItemTemplate>
             </ComboBox>
 
-            <CheckBox Name="chkBxNegative" Margin="2, 0" Style="{StaticResource checkBoxInvert}" IsChecked="{Binding NegativeMatch}" />
-            <CheckBox Name="chkBxDefault" Margin="2, 0" Style="{StaticResource checkBoxDefault}" IsChecked="{Binding DefaultMatch}" />
-            <CheckBox Name="chkBxDismiss" Margin="2, 0" Style="{StaticResource checkBoxDismiss}" IsChecked="{Binding DismissMatch}" />
+            <CheckBox Name="chkBxNegative" Margin="2, 0" Style="{StaticResource checkBoxInvert}" IsChecked="{Binding IsInverted}" />
+            <CheckBox Name="chkBxDefault" Margin="2, 0" Style="{StaticResource checkBoxDefault}" IsChecked="{Binding DefaultResult}" />
+            <CheckBox Name="chkBxDismiss" Margin="2, 0" Style="{StaticResource checkBoxDismiss}" IsChecked="{Binding IsDisabled}" />
 
         </StackPanel>
 
