--- a/Resources/ConverterDictionary.xaml
+++ b/Resources/ConverterDictionary.xaml
@@ -1,7 +1,25 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:converters="clr-namespace:TerminalMonitor.Windows.Converters">
 
+    <converters:ObjectNullOrEmptyConverter x:Key="ObjectNullOrEmptyConverter" />
+
+    <x:Array x:Key="TextMatchOperators" Type="matchers:TextMatchOperator" xmlns:matchers="clr-namespace:TerminalMonitor.Matchers">
+        <matchers:TextMatchOperator>None</matchers:TextMatchOperator>
+        <matchers:TextMatchOperator>Equals</matchers:TextMatchOperator>
+        <matchers:TextMatchOperator>Contains</matchers:TextMatchOperator>
+        <matchers:TextMatchOperator>StartsWith</matchers:TextMatchOperator>
+        <matchers:TextMatchOperator>EndsWith</matchers:TextMatchOperator>
+        <matchers:TextMatchOperator>Matches</matchers:TextMatchOperator>
+    </x:Array>
+
     <converters:MatchOperatorToStringConverter x:Key="MatchOperatorToStringConverter" />
+
+    <x:Array x:Key="GroupMatchModes" Type="matchers:GroupMatchMode" xmlns:matchers="clr-namespace:TerminalMonitor.Matchers.Models">
+        <matchers:GroupMatchMode>All</matchers:GroupMatchMode>
+        <matchers:GroupMatchMode>Any</matchers:GroupMatchMode>
+    </x:Array>
     
+    <converters:MatchModeToStringConverter x:Key="MatchModeToStringConverter" />
+
 </ResourceDictionary>
