--- a/Windows/Controls/FilterListView.xaml
+++ b/Windows/Controls/FilterListView.xaml
@@ -135,10 +135,17 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Button Name="btnAdd" Grid.Column="0" Width="20" Content="+" Click="BtnAdd_Click" />
-            <Button Name="btnUpdate" Grid.Column="1" Width="20" Content="*" Click="BtnUpdate_Click" />
-            <Button Name="btnDelete" Grid.Column="2" Width="20" Content="-" Click="BtnDelete_Click" />
+            <Button Name="btnAdd" Grid.Column="0" Width="20" Content="➕" ToolTip="Add" Click="BtnAdd_Click" />
+            <Button Name="btnDelete" Grid.Column="1" Width="20" Content="➖" ToolTip="Delete" Click="BtnDelete_Click" />
+            <Button Name="btnModify" Grid.Column="2" Width="20" Content="⚙" ToolTip="Modify" Click="BtnModify_Click" />
+            <Button Name="btnCopy" Grid.Column="3" Width="20" Content="📄" ToolTip="Copy" Click="btnCopy_Click" />
+            <Button Name="btnPaste" Grid.Column="4" Width="20" Content="📋" ToolTip="Paste" Click="btnPaste_Click" />
+            <Button Name="btnMoveLeft" Grid.Column="5" Width="20" Content="←" ToolTip="Move Left" Click="btnMoveLeft_Click" />
+            <Button Name="btnMoveRight" Grid.Column="6" Width="20" Content="→" ToolTip="Move Right" Click="btnMoveRight_Click" />
         </Grid>
         
         <ListView Name="lstFilters" Grid.Row="1" Grid.RowSpan="1" Grid.Column="0" Grid.ColumnSpan="3" MinHeight="20"
