Implement setting for text alignment

--- a/Windows/Controls/TerminalView.xaml
+++ b/Windows/Controls/TerminalView.xaml
@@ -53,6 +53,12 @@
         <GridSplitter Grid.Row="2" Height="5" HorizontalAlignment="Stretch" />
 
         <ListView Name="listTerminal" Grid.Row="3">
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                    <Setter Property="VerticalContentAlignment" Value="Stretch" />
+                </Style>
+            </ListView.ItemContainerStyle>
             <ListView.ContextMenu>
                 <ContextMenu>
                     <MenuItem Name="menuItemShowDetail" Header="Detail" Click="MenuItemShowDetail_Click" />
